--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -57,7 +57,7 @@
       <div class="modal-header">
         <h4 class="modal-title">Edit Details</h4>
       </div>
-      <form #userForm="ngForm"  (ngSubmit)="onSubmit()" novalidate>
+      <form #userForm="ngForm"  (ngSubmit)="edit()" novalidate>
         <div class="modal-body">
 
           <div class="content__inner">
