--- a/src/app/pages/report/report.component.html
+++ b/src/app/pages/report/report.component.html
@@ -18,37 +18,41 @@
               <button type="submit" class="btn btn-info"(click)=oWntask()>
                 Start
               </button>&nbsp;&nbsp;
+              <button  type="submit" class="btn btn-warning"(click)=finishtasklist()>
+                Finish_task_List
+              </button>&nbsp;&nbsp;
+              <button  type="submit" class="btn btn-danger"(click)= pausetasklist()>
+                pause_task_List
+              </button>
               
-            <div [hidden]="isDisplay">
+            <div [hidden]="isDisplay"><br/>
             <tr *ngFor="let row of tasks">
 
                 <td *ngIf="row.task.status===null"class="list-group-item list-group-item-primary" bindLabel="task">{{ row.task.task }}
-                <button type="submit" class="btn btn-success" (click)=task(row.task._id)>
+                </td>
+                <td *ngIf="row.task.status===null"> <button type="submit" class="btn btn-warning" (click)=task(row.task._id)>
                   reopen
                 </button>
               </td>
               </tr>
+              
             </div>
             
-            <button  type="submit" class="btn btn-warning"(click)=finishtasklist()>
-              Finish_task_List
-            </button>&nbsp;&nbsp;
+            
                
 
-            <div [hidden]="isdisplay">
+            <div [hidden]="isdisplay"><br/>
               <tr *ngFor="let row of tasks">
-  
-                  <td *ngIf="row.task.status===false"class="list-group-item list-group-item-primary" bindLabel="task">{{ row.task.task }}
-                  <button type="submit" class="btn btn-success" (click)=task(row.task._id)>
+  <td *ngIf="row.task.status===false"class="list-group-item list-group-item-primary" bindLabel="task">{{ row.task.task }}</td><td *ngIf="row.task.status===false">
+                  <button type="submit" class="btn btn-danger" (click)=task(row.task._id)>
                     resume
                   </button>
                 </td>
                 </tr>
+                
               </div>
               
-              <button  type="submit" class="btn btn-danger"(click)= pausetasklist()>
-                pause_task_List
-              </button>
+             
                  
          
        
@@ -59,7 +63,7 @@
 
        <td *ngIf="row.task.status===true"class="list-group-item list-group-item-primary" bindLabel="task">{{ row.task.task }}</td>
        
-<td *ngIf="row.task.status==true"><button type="submit" class="btn btn-danger" (click)=Finish(row.task._id)>
+<td *ngIf="row.task.status==true"><button type="submit" class="btn btn-success" (click)=Finish(row.task._id)>
             Finish
           </button>&nbsp;
           <button type="submit" class="btn btn-warning"  (click)=pause(row.task._id)>
