--- a/src/app/pages/report/report.component.html
+++ b/src/app/pages/report/report.component.html
@@ -10,7 +10,6 @@
         </div>
       </div>
     </div>
-    <div class="row">
         <div class="form-group">
 
               <textarea style="border: #00BCD4 1px solid" class="form-control" rows="5" cols="100" #name="ngModel"name ="task"[(ngModel)]="userModel.task"></textarea>
@@ -19,73 +18,65 @@
                 Start
               </button>&nbsp;&nbsp;
               <button  type="submit" class="btn btn-warning"(click)=finishtasklist()>
-                Finish_task_List
+                Completed Task
               </button>&nbsp;&nbsp;
               <button  type="submit" class="btn btn-danger"(click)= pausetasklist()>
-                pause_task_List
+                OnHold
               </button>
-              
-            <div [hidden]="isDisplay"><br/>
-            <tr *ngFor="let row of tasks">
+        </div>
+            <div [hidden]="isDisplay">
+              <table class="col-md-8"style="   border-collapse: separate;">
+                <tr *ngFor="let row of tasks">
 
-                <td *ngIf="row.task.status===null"class="list-group-item list-group-item-primary" bindLabel="task">{{ row.task.task }}
-                </td>
-                <td *ngIf="row.task.status===null"> <button type="submit" class="btn btn-warning" (click)=task(row.task._id)>
-                  reopen
-                </button>
-              </td>
-              </tr>
-              
+                  <td *ngIf="row.task.status===null" class="list-group-item list-group-item-primary"bindLabel="task">{{ row.task.task }}
+                   </td>
+                  <td *ngIf="row.task.status===null">
+                    <button type="submit" class="btn btn-warning" (click)=task(row.task._id)>
+                      reopen
+                    </button>
+                   </td>
+                </tr>
+              </table>
             </div>
-            
-            
-               
+            <div [hidden]="isdisplay">
+              <table class="col-md-8"style="border-collapse: separate;">
+                <tr *ngFor="let row of tasks">
+                 <td *ngIf="row.task.status===false"class="list-group-item list-group-item-primary" bindLabel="task">{{ row.task.task }}</td>
 
-            <div [hidden]="isdisplay"><br/>
-              <tr *ngFor="let row of tasks">
-  <td *ngIf="row.task.status===false"class="list-group-item list-group-item-primary" bindLabel="task">{{ row.task.task }}</td><td *ngIf="row.task.status===false">
+                  <td *ngIf="row.task.status===false">
                   <button type="submit" class="btn btn-danger" (click)=task(row.task._id)>
                     resume
                   </button>
                 </td>
-                </tr>
-                
-              </div>
-              
-             
-                 
-         
-       
-      </div>
-      <table class="col-md-12"style="   border-collapse: separate;border-spacing: 0 1em;">
+              </tr>
+              </table>
+            </div>
+    <div >
+      <table class="col-md-10"style=" border-collapse: separate;">
 
         <tr *ngFor="let row of tasks">
 
-       <td *ngIf="row.task.status===true"class="list-group-item list-group-item-primary" bindLabel="task">{{ row.task.task }}</td>
-       
-<td *ngIf="row.task.status==true"><button type="submit" class="btn btn-success" (click)=Finish(row.task._id)>
-            Finish
-          </button>&nbsp;
-          <button type="submit" class="btn btn-warning"  (click)=pause(row.task._id)>
-            pause
-          
-          </button>
-        </td>
-
-          <!-- <td *ngIf="row.task.status==false">
-            <button type="submit" class="btn btn-success" (click)=task(row.task._id)>
-              resume 
-            
+          <td *ngIf="row.task.status===true"class="list-group-item list-group-item-primary" bindLabel="task">{{ row.task.task }}</td>
+          <td *ngIf="row.task.status==true">
+            <button type="submit" class="btn btn-success" (click)=Finish(row.task._id)>
+              Finish
+            </button>&nbsp;
+            <button type="submit" class="btn btn-warning"  (click)=pause(row.task._id)>
+              Pause
             </button>
-          </td>-->
-       
+          </td>
         </tr>
-
       </table>
     </div>
 
-  </div>
-</div>
+
+
+
+
+      </div>
+
+    </div>
+
 
 <div   class="card">
   <div class="card-body">
